--- a/templates/test.html
+++ b/templates/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>hello</title>
+        <title>hello 2</title>
     </head>
     <body>
         <h3>helloooo</h3>
