--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,38 @@
     background-color: #512DAB;
 }
 
-.card-header {
+.bg-yellow {
+    background-color: #fcba03;
+}
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+
+}
+
+.nav-tabs .nav-item .nav-link.active {
     background-color: #512DAB;
+    color: white
+}
+
+.purple-head {
+    background-color: #512DAB;
+}
+
+.carousel {
+    background:#512DA8;
+}
+
+.carousel-item {
+  height: 300px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
 }
