--- a/css/styles.css
+++ b/css/styles.css
@@ -77,3 +77,10 @@
 .text-black {
     color: black;
 }
+
+#carouselButton {
+    right: 0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
